feat: lrt withdrawal data

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup": "sqd down && sqd up && sleep 2 && sqd migration:apply",
     "process:lrt": "sqd process:lrt",
     "serve": "sqd serve",
-    "process": "npm-run-all --parallel sqd process:lrt",
+    "process": "sqd process:lrt",
     "generate": "npm-run-all codegen migration:generate"
   },
   "dependencies": {
