--- a/squid.yaml
+++ b/squid.yaml
@@ -12,8 +12,9 @@ deploy:
     - name: lrt-processor
       cmd: [ "sqd", "process:lrt:prod" ]
       env:
-        BLOCK_TO: "20174195"
-        # RPC_ENV: RPC_ENDPOINT_TENDERLY
+        # BLOCK_TO: "20174194"
+        RPC_ENV: "RPC_ENDPOINT_TENDERLY"
+        DISABLE_ARCHIVE: "true"
   api:
     cmd:
       - npx
