--- a/squid.yaml
+++ b/squid.yaml
@@ -8,6 +8,7 @@ deploy:
     postgres:
   secrets:
     - RPC_ENDPOINT
+    - RPC_ENDPOINT_TENDERLY
   processor:
     - name: lrt-processor
       cmd: [ "sqd", "process:lrt:prod" ]
