feat: update deploy yaml

--- a/squid.yaml
+++ b/squid.yaml
@@ -1,6 +1,6 @@
 manifestVersion: subsquid.io/v0.1
 name: prime-eth-squid
-version: 999
+version: 14
 description: 'Prime Staked ETH 🦑'
 build:
 deploy:
@@ -8,14 +8,10 @@ deploy:
     postgres:
   secrets:
     - RPC_ENDPOINT
-    - RPC_ENDPOINT_TENDERLY
+    - RPC_ENV
   processor:
     - name: lrt-processor
       cmd: [ "sqd", "process:lrt:prod" ]
-      env:
-        # BLOCK_TO: "20174194"
-        RPC_ENV: "RPC_ENDPOINT_TENDERLY"
-        DISABLE_ARCHIVE: "true"
   api:
     cmd:
       - npx
